--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,9 @@ dependencies:
   firebase_core_platform_interface: ^5.0.0
   flutter_background_service: ^5.0.5
   google_nav_bar: ^5.0.6
+  flutter_switch: ^0.3.2
+  curved_navigation_bar: ^1.0.3
+  flutter_gradient_app_bar: ^0.3.1
 
 dev_dependencies:
   flutter_test:
@@ -70,6 +73,8 @@ flutter:
   assets:
     - assets/images/
     - assets/images/forgetPassword.png
+    - assets/images/Test.jpg
+    - assets/images/test 2.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
