--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,8 @@ dependencies:
   flutter_switch: ^0.3.2
   curved_navigation_bar: ^1.0.3
   flutter_gradient_app_bar: ^0.3.1
+  dropdown_button2: ^2.3.9
+  dropdown_search: ^5.0.6
 
 dev_dependencies:
   flutter_test:
