--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,13 @@ dependencies:
   flutter_gradient_app_bar: ^0.3.1
   dropdown_button2: ^2.3.9
   dropdown_search: ^5.0.6
+  intl: ^0.19.0
+  provider: ^6.1.2
+  table_calendar: ^3.1.1
+  shared_preferences: ^2.2.3
+  font_awesome_flutter: ^10.7.0
+  dio: ^5.4.3+1
+  lottie: ^3.1.0
 
 dev_dependencies:
   flutter_test:
