--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,10 @@ dependencies:
   font_awesome_flutter: ^10.7.0
   dio: ^5.4.3+1
   lottie: ^3.1.0
+  firebase_messaging: ^14.9.1
+  awesome_notifications: ^0.9.3+1
+  flutter_local_notifications: ^17.1.1
+  syncfusion_flutter_calendar: ^25.1.42
 
 dev_dependencies:
   flutter_test:
