--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,10 @@ dependencies:
   awesome_notifications: ^0.9.3+1
   flutter_local_notifications: ^17.1.1
   syncfusion_flutter_calendar: ^25.1.42
+  timezone: ^0.9.2
+  permission_handler: ^11.3.1
+  image_picker: ^1.1.1
+  cloud_functions: ^4.7.4
 
 dev_dependencies:
   flutter_test:
@@ -88,6 +92,7 @@ flutter:
     - assets/images/forgetPassword.png
     - assets/images/Test.jpg
     - assets/images/test 2.jpg
+    - assets/images/blood.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
