--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,8 +62,13 @@ dependencies:
   syncfusion_flutter_calendar: ^25.1.42
   timezone: ^0.9.2
   permission_handler: ^11.3.1
-  image_picker: ^1.1.1
+  image_picker: ^1.1.2
   cloud_functions: ^4.7.4
+  workmanager: ^0.5.2
+  gap: ^3.0.1
+  badges: ^3.1.2
+  cached_network_image: ^3.3.1
+  # image_downloader: ^0.31.0
 
 dev_dependencies:
   flutter_test:
