--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -9,7 +9,9 @@
 # packages, and plugins designed to encourage good coding practices.
 analyzer:
   errors:
-    file_names: ignore ignore
+    file_names: ignore
+    invalid_return_type_for_catch_error: ignore
+    library_private_types_in_public_api: ignore
     non_constant_identifier_names: ignore
     unused_element: ignore
     use_build_context_synchronously: ignore
